--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,17 @@ img {
   color: var(--accent-color);
 }
 
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.page {
+  flex: 1 1 auto;
+}
+
 :root {
   --accent-color: #2196f3;
   --secondary-accent-color: #188ce8;
@@ -817,6 +828,28 @@ img {
   /* outline: 1px solid red; */
 }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    max-width: 970px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .container {
+    max-width: 750px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: none;
+    padding: 0px 15px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    min-height: 0;
+  }
+}
 .team__soc {
   display: flex;
   justify-content: center;
